--- a/Makefile.impls
+++ b/Makefile.impls
@@ -39,7 +39,7 @@ IMPLS = ada ada.2 awk bash basic bbc-basic c c.2 chuck clojure coffee common-lis
 	guile haskell haxe hy io janet java java-truffle js jq julia kotlin latex3 livescript logo lua make mal \
 	matlab miniMAL nasm nim objc objpascal ocaml perl perl6 php picolisp pike plpgsql \
 	plsql powershell prolog ps purs python python.2 r racket rexx rpython ruby ruby.2 rust scala scheme skew sml \
-	swift swift3 swift4 swift5 tcl ts vala vb vhdl vimscript wasm wren yorick xslt zig
+	swift swift3 swift4 swift5 tcl ts vala vb vbs vhdl vimscript wasm wren yorick xslt zig
 
 step5_EXCLUDES += bash        # never completes at 10,000
 step5_EXCLUDES += basic       # too slow, and limited to ints of 2^16
@@ -191,6 +191,7 @@ tcl_STEP_TO_PROG =           impls/tcl/$($(1)).tcl
 ts_STEP_TO_PROG =            impls/ts/$($(1)).js
 vala_STEP_TO_PROG =          impls/vala/$($(1))
 vb_STEP_TO_PROG =            impls/vb/$($(1)).exe
+vbs_STEP_TO_PROG =           impls/vbs/$($(1)).vbs
 vhdl_STEP_TO_PROG =          impls/vhdl/$($(1))
 vimscript_STEP_TO_PROG =     impls/vimscript/$($(1)).vim
 wasm_STEP_TO_PROG =          impls/wasm/$($(1)).wasm
