--- a/Makefile.impls
+++ b/Makefile.impls
@@ -77,6 +77,7 @@ else ifeq ($(MAL_IMPL),powershell)
 mal_TEST_OPTS = --start-timeout 60 --test-timeout 180
 endif
 xslt_TEST_OPTS = --test-timeout 120
+vbs_TEST_OPTS = --no-pty
 
 
 #
