--- a/Makefile.impls
+++ b/Makefile.impls
@@ -26,7 +26,7 @@ python_MODE = python
 scheme_MODE = chibi
 # sml (polyml, mlton, mosml)
 sml_MODE = polyml
-# wasmtime wasmer lucet wax  node warpy  wace_libc
+# wasmtime wasmer wax node warpy wace_libc direct js wace_fooboot
 wasm_MODE = wasmtime
 
 
@@ -36,13 +36,14 @@ wasm_MODE = wasmtime
 
 IMPLS = ada ada.2 awk bash basic bbc-basic c c.2 chuck clojure coffee common-lisp cpp crystal cs d dart \
 	elisp elixir elm erlang es6 factor fantom fennel forth fsharp go groovy gnu-smalltalk \
-	guile haskell haxe hy io janet java java-truffle js jq julia kotlin livescript logo lua make mal \
+	guile haskell haxe hy io janet java java-truffle js jq julia kotlin latex3 livescript logo lua make mal \
 	matlab miniMAL nasm nim objc objpascal ocaml perl perl6 php picolisp pike plpgsql \
 	plsql powershell prolog ps purs python python.2 r racket rexx rpython ruby ruby.2 rust scala scheme skew sml \
 	swift swift3 swift4 swift5 tcl ts vala vb vbs vhdl vimscript wasm wren yorick xslt zig
 
 step5_EXCLUDES += bash        # never completes at 10,000
 step5_EXCLUDES += basic       # too slow, and limited to ints of 2^16
+step5_EXCLUDES += latex3      # no iteration, limited native stack
 step5_EXCLUDES += make        # no TCO capability (iteration or recursion)
 step5_EXCLUDES += mal         # host impl dependent
 step5_EXCLUDES += matlab      # never completes at 10,000
@@ -147,6 +148,7 @@ js_STEP_TO_PROG =            impls/js/$($(1)).js
 jq_STEP_PROG =               impls/jq/$($(1)).jq
 julia_STEP_TO_PROG =         impls/julia/$($(1)).jl
 kotlin_STEP_TO_PROG =        impls/kotlin/$($(1)).jar
+latex3_STEP_TO_PROG =        impls/latex3/$($(1)).tex
 livescript_STEP_TO_PROG =    impls/livescript/$($(1)).js
 logo_STEP_TO_PROG =          impls/logo/$($(1)).lg
 lua_STEP_TO_PROG =           impls/lua/$($(1)).lua
@@ -194,7 +196,7 @@ vb_STEP_TO_PROG =            impls/vb/$($(1)).exe
 vbs_STEP_TO_PROG =           impls/vbs/$($(1)).vbs
 vhdl_STEP_TO_PROG =          impls/vhdl/$($(1))
 vimscript_STEP_TO_PROG =     impls/vimscript/$($(1)).vim
-wasm_STEP_TO_PROG =          impls/wasm/$($(1)).$(if $(filter lucet,$(wasm_MODE)),so,wasm)
+wasm_STEP_TO_PROG =          impls/wasm/$($(1)).wasm
 wren_STEP_TO_PROG =          impls/wren/$($(1)).wren
 yorick_STEP_TO_PROG =        impls/yorick/$($(1)).i
 xslt_STEP_TO_PROG =          impls/xslt/$($(1))
