vbs: import `Vampire/setup-wsl`

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,6 +138,9 @@ jobs:
       fail-fast: false
       matrix: ${{ fromJson(needs.get-matrix.outputs.matrix-windows) }}
     steps:
+      - uses: Vampire/setup-wsl@v3
+        with:
+            distribution: ubuntu-24.04
       - uses: actions/checkout@v4
       - name: Build
         shell: bash
