--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,22 +143,22 @@ jobs:
             distribution: Ubuntu-24.04
       - uses: actions/checkout@v4
       - name: Build
-        shell: bash
+        shell: wsl-bash
         run: |
           export ${{ matrix.IMPL }}
           ./ci.sh build ${IMPL}
       - name: Step Tests
-        shell: bash
+        shell: wsl-bash
         run: |
           export ${{ matrix.IMPL }}
           ./ci.sh test ${IMPL}
       - name: Regression Tests
-        shell: bash
+        shell: wsl-bash
         run: |
           export ${{ matrix.IMPL }}
           STEP=stepA REGRESS=1 HARD=1 OPTIONAL=0 ./ci.sh test ${IMPL}
       - name: Performance Tests
-        shell: bash
+        shell: wsl-bash
         run: |
           export ${{ matrix.IMPL }}
           ./ci.sh perf ${IMPL}
