--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,7 +140,11 @@ jobs:
     steps:
       - uses: Vampire/setup-wsl@v3
         with:
-            distribution: Ubuntu-24.04
+            distribution: kali-linux
+      - name: Install requirements for WSL
+        shell: wsl-bash {0}
+        run: |
+          sudo ln -s /usr/bin/python2 /usr/bin/python
       - uses: actions/checkout@v4
       - name: Build
         shell: wsl-bash {0}
