vbs: install `python2` for `WSL`

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,8 +144,9 @@ jobs:
       - name: Install requirements for WSL
         shell: wsl-bash {0}
         run: |
-          sudo ln -s /usr/bin/python2 /usr/bin/python
           sudo apt install make -y
+          sudo apt install python2 -y
+          sudo ln -s /usr/bin/python2 /usr/bin/python
       - uses: actions/checkout@v4
       - name: Build
         shell: wsl-bash {0}
