--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -163,6 +163,7 @@ jobs:
         shell: wsl-bash {0}
         run: |
           export ${{ matrix.IMPL }}
+          make "test^vbs^step6"
           STEP=stepA REGRESS=1 HARD=1 OPTIONAL=0 ./ci.sh test ${IMPL}
       - name: Performance Tests
         shell: wsl-bash {0}
