GHA, ci.sh: dump debug log in separate step.
- In ci.sh just print the path to the debug log file on errors.
- In GHA workflow, dump the debug log in a separate final step if there
  were errors. This will make it more usable for tracking down errors.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,9 @@ jobs:
             # Check that self-hosted mode really ran
             [ "`grep -a "mal-user>" test-mal-*${IMPL}.debug | wc -l`" -gt 800 ]
           fi
+      - name: Print debug log
+        if: failure()
+        run: cat *.debug
       - name: Archive logs and debug output
         uses: actions/upload-artifact@v4
         with:
@@ -134,6 +137,9 @@ jobs:
             # Check that self-hosted mode really ran
             [ "`grep -a "mal-user>" test-mal-*${IMPL}.debug | wc -l`" -gt 800 ]
           fi
+      - name: Print debug log
+        if: failure()
+        run: cat *.debug
       - name: Archive logs and debug output
         uses: actions/upload-artifact@v4
         with:
@@ -181,6 +187,9 @@ jobs:
         run: |
           export ${{ matrix.IMPL }}
           ./ci.sh perf ${IMPL}
+      - name: Print debug log
+        if: failure()
+        run: cat *.debug
       - name: Archive logs and debug output
         uses: actions/upload-artifact@v4
         with:
