GHA: self-host by default. Skip jq, nasm, powershell, xslt, vbs
Xslt may never be able to do full self-hosted tests. Powershell succeeds
but doubles the total runtime for the GHA workflow.

We would definitely like jq, nasm, and possibly vbs to be fixed for
self-hosted tests.
Ticket tracking fixes: https://github.com/kanaka/mal/issues/662

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
       self-hosted:
         description: 'Include self-hosted tests'
         required: true
-        default: 'no'
+        default: 'yes'
         options: ['yes', 'no']
 
 jobs:
@@ -80,7 +80,7 @@ jobs:
           export ${{ matrix.IMPL }}
           ./ci.sh perf ${IMPL}
       - name: Self-hosted Tests
-        if: ${{ github.event.inputs.self-hosted == 'yes' }}
+        if: ${{ github.event.inputs.self-hosted != 'no' }}
         run: |
           export ${{ matrix.IMPL }}
           if [ -n "${NO_SELF_HOST:-}" ]; then
@@ -127,7 +127,7 @@ jobs:
           export ${{ matrix.IMPL }}
           ./ci.sh perf ${IMPL}
       - name: Self-hosted Tests
-        if: ${{ github.event.inputs.self-hosted == 'yes' }}
+        if: ${{ github.event.inputs.self-hosted != 'no' }}
         run: |
           export ${{ matrix.IMPL }}
           if [ -n "${NO_SELF_HOST:-}" ]; then
@@ -188,7 +188,7 @@ jobs:
           export ${{ matrix.IMPL }}
           ./ci.sh perf ${IMPL}
       - name: Self-hosted Tests
-        if: ${{ github.event.inputs.self-hosted == 'yes' }}
+        if: ${{ github.event.inputs.self-hosted != 'no' }}
         shell: wsl-bash {0}
         run: |
           export ${{ matrix.IMPL }}
