--- a/IMPLS.yml
+++ b/IMPLS.yml
@@ -122,4 +122,4 @@ IMPL:
 # - {IMPL: swift4, NO_DOCKER: 1, OS: xcode10}}
   - {IMPL: swift5, NO_DOCKER: 1, OS: macos}
 
-  - {IMPL: vbs, NO_DOCKER: 1, OS: windows, NO_SELF_HOST: 1} # startup invoke failure
+  - {IMPL: vbs, NO_DOCKER: 1, OS: windows}
