--- a/Makefile.impls
+++ b/Makefile.impls
@@ -20,8 +20,6 @@ d_MODE = gdc
 haxe_MODE = neko
 # octave or matlab
 matlab_MODE = octave
-# python, python2 or python3
-python_MODE = python
 # scheme (chibi, kawa, gauche, chicken, sagittarius, cyclone, foment)
 scheme_MODE = chibi
 # sml (polyml, mlton, mosml)
@@ -38,7 +36,7 @@ IMPLS = ada ada.2 awk bash basic bbc-basic c c.2 chuck clojure coffee common-lis
 	elisp elixir elm erlang es6 factor fantom fennel forth fsharp go groovy gnu-smalltalk \
 	guile haskell haxe hy io janet java java-truffle js jq julia kotlin latex3 livescript logo lua make mal \
 	matlab miniMAL nasm nim objc objpascal ocaml perl perl6 php picolisp pike plpgsql \
-	plsql powershell prolog ps purs python python.2 r racket rexx rpython ruby ruby.2 rust scala scheme skew sml \
+	plsql powershell prolog ps purs python2 python3 r racket rexx rpython ruby ruby.2 rust scala scheme skew sml \
 	swift swift3 swift4 swift5 tcl ts vala vb vbs vhdl vimscript wasm wren yorick xslt zig
 
 step5_EXCLUDES += bash        # never completes at 10,000
@@ -174,8 +172,8 @@ powershell_STEP_TO_PROG =    impls/powershell/$($(1)).ps1
 prolog_STEP_TO_PROG =        impls/prolog/$($(1)).pl
 ps_STEP_TO_PROG =            impls/ps/$($(1)).ps
 purs_STEP_TO_PROG =          impls/purs/$($(1)).js
-python_STEP_TO_PROG =        impls/python/$($(1)).py
-python.2_STEP_TO_PROG =      impls/python.2/$($(1)).py
+python2_STEP_TO_PROG =       impls/python2/$($(1)).py
+python3_STEP_TO_PROG =       impls/python3/$($(1)).py
 r_STEP_TO_PROG =             impls/r/$($(1)).r
 racket_STEP_TO_PROG =        impls/racket/$($(1)).rkt
 rexx_STEP_TO_PROG =          impls/rexx/$($(1)).rexxpp
