GHA: use `Ubuntu-24.04` instead of `kali-linux` in WSL

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,7 +158,7 @@ jobs:
     steps:
       - uses: Vampire/setup-wsl@v3
         with:
-            distribution: kali-linux
+            distribution: Ubuntu-24.04
       - name: Install requirements for WSL
         shell: wsl-bash {0}
         run: |
