swift{3,4,5}: fix Linux Dockerfile, enable in CI.
Update the paths for the swift packages in the Dockerfile. Enable
swift3, swift4, and swift5 builds using Linux on CI (the OSX/XCode ones
are there are commented out since they have go GHA runners that support
them).

--- a/impls/swift5/Dockerfile
+++ b/impls/swift5/Dockerfile
@@ -35,7 +35,7 @@ ENV SWIFT_PREFIX swift-5.1.1-RELEASE
 ENV SWIFT_RELEASE ${SWIFT_PREFIX}-ubuntu16.04
 
 RUN cd /opt && \
-    curl -O https://swift.org/builds/swift-5.1.1-release/ubuntu1604/${SWIFT_PREFIX}/${SWIFT_RELEASE}.tar.gz && \
+    curl -O https://download.swift.org/swift-5.1.1-release/ubuntu1604/${SWIFT_PREFIX}/${SWIFT_RELEASE}.tar.gz && \
     tar xvzf ${SWIFT_RELEASE}.tar.gz && \
     rm ${SWIFT_RELEASE}.tar.gz
 
