--- a/IMPLS.yml
+++ b/IMPLS.yml
@@ -115,9 +115,12 @@ IMPL:
   - {IMPL: zig}
 
   # See .travis.yml (for older osx / xcode tests)
-# - {IMPL: swift,  NO_DOCKER: 1, OS: xcode7.3}}
-# - {IMPL: swift3, NO_DOCKER: 1, OS: xcode8}}
-# - {IMPL: swift4, NO_DOCKER: 1, OS: xcode10}}
+# - {IMPL: swift,  NO_DOCKER: 1, OS: xcode7.3}
+  - {IMPL: swift3}
+# - {IMPL: swift3, NO_DOCKER: 1, OS: xcode8}
+  - {IMPL: swift4}
+# - {IMPL: swift4, NO_DOCKER: 1, OS: xcode10}
+  - {IMPL: swift5}
   - {IMPL: swift5, NO_DOCKER: 1, OS: macos}
 
   - {IMPL: vbs, NO_DOCKER: 1, OS: windows}
