--- a/impls/livescript/package.json
+++ b/impls/livescript/package.json
@@ -1,18 +1,7 @@
 {
-  "name": "livescript",
+  "name": "make-a-lisp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "dependencies": {
-    "koffi": "^2.9.0",
-    "prelude-ls": "^1.1.2"
-  },
-  "devDependencies": {
-    "livescript": "^1.6.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "koffi": "^2.9.0"
+  }
 }
