js,es6: switch from ffi-napi to koffi.

--- a/impls/es6/package.json
+++ b/impls/es6/package.json
@@ -3,10 +3,7 @@
     "version": "0.0.1",
     "description": "Make a Lisp (mal) language implemented in ES6 (ECMAScript 6 / ECMAScript 2015)",
     "dependencies": {
-        "esm": "3.1.x",
-        "ffi-napi": "4.0.3"
+        "koffi": "^2.12.1"
     },
-    "esm": {
-        "cjs": true
-    }
+    "type": "module"
 }
