--- a/impls/js/package.json
+++ b/impls/js/package.json
@@ -3,6 +3,6 @@
     "version": "0.0.1",
     "description": "Make a Lisp (mal) language implemented in Javascript",
     "dependencies": {
-        "ffi-napi": "4.0.3"
+        "koffi": "^2.12.1"
     }
 }
