--- a/impls/coffee/package.json
+++ b/impls/coffee/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "Make a Lisp (mal) language implemented in CoffeeScript",
     "dependencies": {
-        "ffi-napi": "4.0.3",
-        "coffeescript": "~1.8"
+        "coffeescript": "^2.7.0",
+        "koffi": "^2.12.1"
     }
 }
