--- a/impls/miniMAL/package.json
+++ b/impls/miniMAL/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "Make a Lisp (mal) language implemented in miniMAL",
     "dependencies": {
-        "minimal-lisp": "1.0.2",
-        "ffi-napi": "4.0.3"
+        "koffi": "^2.12.1",
+        "minimal-lisp": "1.2.2"
     }
 }
