--- a/impls/ts/package.json
+++ b/impls/ts/package.json
@@ -19,10 +19,9 @@
     "test:stepA": "cd .. && make 'test^ts^stepA'"
   },
   "dependencies": {
-    "ffi-napi": "^4.0.3"
+    "koffi": "^2.12.1"
   },
   "devDependencies": {
-    "@types/ffi-napi": "4.0.4",
     "@types/node": "^14.14.3",
     "typescript": "^4.3.5",
     "typescript-formatter": "^7.2.2"
