io: disable self-host for now (invalid pointer).
Bug: https://github.com/kanaka/mal/issues/715

--- a/IMPLS.yml
+++ b/IMPLS.yml
@@ -41,7 +41,7 @@ IMPL:
   - {IMPL: haxe, haxe_MODE: cpp, SLOW: 1}
   - {IMPL: haxe, haxe_MODE: js}
   - {IMPL: hy}
-  - {IMPL: io, NO_SELF_HOST_PERF: 1}  # perf OOM
+  - {IMPL: io, NO_SELF_HOST: 1, NO_SELF_HOST_PERF: 1}  # invalid pointer, perf OOM
   - {IMPL: janet}
   - {IMPL: java}
   - {IMPL: java-truffle}
