--- a/IMPLS.yml
+++ b/IMPLS.yml
@@ -121,6 +121,6 @@ IMPL:
   - {IMPL: swift4}
 # - {IMPL: swift4, NO_DOCKER: 1, OS: xcode10}
   - {IMPL: swift6}
-  - {IMPL: swift6, NO_DOCKER: 1, OS: macos}
+# - {IMPL: swift6, NO_DOCKER: 1, OS: macos} # works but too expensive in GH Actions
 
-  - {IMPL: vbs, NO_DOCKER: 1, OS: windows}
+  - {IMPL: vbs, NO_SELF_HOST: 1, NO_DOCKER: 1, OS: windows} # self-host too slow/expensive in GH Actions
