c.2: reminder of build commands, cosmetic changes
Various typos or space formatting.
Remove the gprof output file when cleaning.
Prefer unsigned types when negative values do not make sense.
Prefer bool to int.
Do not assert that a pointer is not NULL right before dereferencing it.
Fix vector_append when the initial capacity is 0 (this does not happen yet).
Check the count after filling a vector.

--- a/impls/c.2/Makefile
+++ b/impls/c.2/Makefile
@@ -21,7 +21,7 @@ ifndef no_fast
   CFLAGS  += -flto -O3 -DNDEBUG
   LDFLAGS += -flto
 endif
-ifdef profilie
+ifdef profile
   CFLAGS  += -pg
   LDFLAGS += -pg
 endif
@@ -71,6 +71,6 @@ deps:
 	$(CC) -MM -MF- *.c > $@
 
 clean:
-	rm -f $(S0+) *.o deps
+	rm -f $(S0+) *.o deps gmon.out
 
 .PHONY: all clean
