rust: various improvements
`make lint` reformats the code, creating a lot of space/indentation
noise in the diff.

Cargo.lock:
 * remove from git, add to clean Make target.

Cargo.toml, Dockerfile:
 * install regex and rustyline via apt-get.

Cargo.toml, Dockerfile, reader.rs, readline.rs, steps:
 * Implement global variables with thread_local, avoiding an external
   dependency on lazy_static and/or the complexity of Mutex.

Makefile, core.rs, readline.rs, steps:
 * Move the readline stuff into a separate file.
 * enable history during self-hosting
 * save the history at exit, not after each line
 * skip empty lines
 * crash on readline errors (other than EOF)

core.rs, steps, types.rs:
 * remove specific error types. try* requires a MAL form anyway.
 * Split the {list,vector}! macros. A variant only needs a function,
   the other one need no intermediate array.
 * Introduce a FuncStruct intermediate struct for the Func enum
   variant. This allows functional update syntax and more intuitive
   pattern matching (fn? macro? defmacro!).

core.rs, types.rs:
 * Move type helpers hide/encapsulate nothing from types.rs to core.rs.
 * Add a Kwd variant to the MalVal enum, with (un)wrap_map_key helpers.
   This is safer than a prefix (for example, `(slurp :a)` was accepted).

core.rs:
 vals: fix typo
 vec: clone if already a vector.
 nth: the .get() standard function checks array bounds.
 first, rest, seq: merge similar choices
 get_meta, with_meta, atom: remove the intermediate anonymous function
   (it is confusing and does not bring anything)

env.rs:
 The outer field is private.
 The outer argument for env_bind is not optional.

env.rs, steps:
 Implement the eval core function, using a global REPL environment. It
 was implemented with a special form and an env method searching the
 ancester of the current environment (`(map eval [1])` was failing).

reader.rs:
 Let read_seq always return a vector, and read_form deal with the result,
 instead of duplicating the choices.

--- a/impls/rust/Makefile
+++ b/impls/rust/Makefile
@@ -19,6 +19,7 @@ all: $(STEPS)
 $(STEPS): $(EXEC_DIR)/%: %.rs
 	cargo build --release --bin $*
 
+$(STEPS): readline.rs
 $(STEP1-2) $(STEP3) $(UPPER_STEPS): types.rs reader.rs printer.rs
 $(STEP3) $(UPPER_STEPS): env.rs
 $(UPPER_STEPS): core.rs
@@ -27,7 +28,8 @@ lint:
 	rustfmt *.rs
 	cargo clippy
 
-.PHONY: clean
+.PHONY: clean lint all
 
 clean:
-	cargo clean
+	rm -fr target/
+	rm -f .mal-history *~ Cargo.lock
