--- a/impls/rust/Dockerfile
+++ b/impls/rust/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:24.04
+FROM ubuntu:25.04
 MAINTAINER Joel Martin <github@martintribe.org>
 
 ##########################################################
@@ -22,7 +22,8 @@ WORKDIR /mal
 RUN apt-get -y install cargo \
   librust-fnv-dev \
   librust-itertools-dev \
-  librust-lazy-static-dev \
+  librust-regex-dev \
+  librust-rustyline-dev \
   rust-clippy rustfmt
 
 ENV CARGO_HOME /mal
